--- a/puppetplays-web/components/searchBar.module.scss
+++ b/puppetplays-web/components/searchBar.module.scss
@@ -43,6 +43,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0;
   width: 30px;
   height: 30px;
   border-radius: 15px;
