--- a/puppetplays-web/styles/globals.css
+++ b/puppetplays-web/styles/globals.css
@@ -170,6 +170,7 @@ p > a:hover {
   font-family: var(--ff-sans);
   background-color: white;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  padding: 0;
   width: 30px;
   height: 30px;
   border: 0;
